# cargo-bazel-repin-issue

./: .gitignore  Cargo.toml  README.md  WORKSPACE  repro.sh
rust/repro/: BUILD.bazel  Cargo.toml
rust/repro/src/: lib.rs
rust/repro/tests/: test.rs
