load("@crates//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "repro",
    srcs = [
        "src/lib.rs",
    ],
    deps = all_crate_deps(),
)

rust_test(
    name = "repro-test",
    srcs = [
        "tests/test.rs",
    ],
    deps = [
        ":repro",
    ] + all_crate_deps(),
)
